test_files/invalid/007-for-without-var.man
def main()
    for in 1..20
        foo()
    end
end
